--- a/Tanks/Tanks.csproj
+++ b/Tanks/Tanks.csproj
@@ -174,6 +174,8 @@
     <Content Include="Static\img\Wall.png" />
     <Content Include="Static\Js\board.js" />
     <Content Include="Static\Js\controls.js" />
+    <Content Include="Static\Js\jquery-3.2.1.min.js" />
+    <Content Include="Static\Js\main.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
