Med en splash-screen!

--- a/Tanks/Tanks.csproj
+++ b/Tanks/Tanks.csproj
@@ -159,6 +159,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="game.html" />
     <Content Include="index.html" />
     <Content Include="Static\Css\boardStyle.css" />
     <Content Include="Static\Css\controlStyle.css" />
